--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.comment-section {
+  height: 100vh;
+  display: block;
+  padding-top: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: auto;
+  margin-top: 20px;
+  background-color: rgba(0, 0, 0, 0.377);
+  width: 80%;
+}
+.comment-display {
+  background-color: white;
+  width: 50vh;
+  height: 50px;
+  border-radius: 5px;
+  width: 80%;
+  margin: 10px 0;
+  margin-left: auto;
+  margin-right: auto;
+  word-break: break-all;
+  display:block;
+}
+.comment-container {
+  margin-top: 20px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+.title {
+  text-align: center;
+}
+.input {
+  height:10vh;
+  width: 80%;
+  padding-top: 8px;
+  border-radius: 7px;
+  display: flex;
+  margin:auto;
+  font-size: large;
+  font-family:'Times New Roman', Times, serif;
+}
+.submit {
+  height: 40px;
+  width: 120px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 12px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  background-color: rgb(0, 195, 255);
+  margin-left: 52rem;
 }
